Another fix attempt at the footer overlap

--- a/style.css
+++ b/style.css
@@ -3,6 +3,4 @@ h1 {
     margin-bottom: 1em;
 }
 
-button {
-    margin-bottom: 5em;
-}
+body { padding-bottom: 70px; }
